//
//  Constants.swift
//  TASTEBUDS
//
//  Created by Aditya on 19/06/25.
//

enum ErrorTitles: String {
    case error = "Error"
}

enum ErrorDesc: String {
    case noDataFound = "No data found"
}

enum FileNames: String {
    case recipeTableViewCell = "RecipeTableViewCell"
    case ingredientsTableViewCell = "IngredientsTableViewCell"
    case mealDetailsViewController = "MealDetailsViewController"
}

enum StringConstants: String {
    case popularRecipes = "Popular Recipes"
    case viewOnYoutube = "View on Youtube"
    case invalidURL = "Invalid URL or cannot open"
}
