...
                                <rect key="frame" x="20" y="306.33333333333331" width="100" height="65.666666666666686"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="bTl-WK-AcB"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="View More">
                                    <color key="titleColor" systemColor="systemTealColor"/>
                                </state>
                                <connections>
                                    <action selector="viewMoreBtnTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="EMU-H1-Xc5"/>
                                </connections>
                            </button>
...
